syntax = "proto3";
import "common/rpc/base.proto";


service Api {
    // Performs synchronous ping of service
    rpc ping(Ping) returns (Pong);

    rpc updateSession(UpdateSessionRequest) returns (UpdateSessionResponse);
    rpc nannyUpdate(NannyUpdateRequest) returns (NannyUpdateResponse);
}

message NannyUpdateRequest {
    
}

message UpdateSessionRequest {
    string session = 1;
    Serialized document = 2;
}

message UpdateSessionResponse {
    bool status = 1;
    optional string message = 2;
}